code refactoring and minor updates